Fix stretch 3

--- a/styles.scss
+++ b/styles.scss
@@ -223,6 +223,7 @@ p {
     .card-content {
       padding: 3rem;
       gap: 1rem;
+      max-height: 426px;
     }
   }
 }
